[package]
name = "integration-tests-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
# === Renegade Dependencies === #
renegade-circuit-types = { package = "circuit-types", path = "/Users/joeykraut/work/renegade/circuit-types" }
renegade-circuits = { package = "circuits", path = "/Users/joeykraut/work/renegade/circuits" }
renegade-util = { package = "util", path = "/Users/joeykraut/work/renegade/util", default-features = false, features = [
    "blockchain",
] }
test-helpers = { package = "test-helpers", path = "/Users/joeykraut/work/renegade/test-helpers" }

# === Test Harness Dependencies === #
clap = { version = "4.0", features = ["derive"] }
colored = "3"
eyre = "0.6"
inventory = "0.3"
tokio = { version = "1.36", features = ["full"] }
