[package]
name = "integration-tests-v2"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[dependencies]
alloy = { version = "1.1.2", features = ["node-bindings", "rpc-types-anvil"] }

# === Renegade Dependencies === #
renegade-abi = { package = "abi", path = "../../abi", features = [
    "v2",
    "v2-relayer-types",
    "v2-auth-helpers",
    "transfer-auth",
] }
renegade-circuit-types = { package = "circuit-types", path = "/Users/joeykraut/work/renegade/circuit-types" }
renegade-circuits = { package = "circuits", path = "/Users/joeykraut/work/renegade/circuits", features = [
    "test_helpers",
] }
renegade-common = { package = "common", path = "/Users/joeykraut/work/renegade/common" }
renegade-constants = { package = "constants", path = "/Users/joeykraut/work/renegade/constants" }
renegade-crypto = { path = "/Users/joeykraut/work/renegade/renegade-crypto" }
renegade-util = { package = "util", path = "/Users/joeykraut/work/renegade/util", default-features = false, features = [
    "blockchain",
] }
test-helpers = { package = "test-helpers", path = "/Users/joeykraut/work/renegade/test-helpers" }

# === Test Harness Dependencies === #
clap = { version = "4.0", features = ["derive"] }
colored = "3"
eyre = "0.6"
inventory = "0.3"
tokio = { version = "1.36", features = ["full"] }

# === Misc Dependencies === #
itertools = "0.13"
num-bigint = "0.4"
rand = "0.8"
serde_json = "1.0"
# === Blockchain === #
