[package]
name = "integration-tests-v2"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[dependencies]
alloy = { version = "1.1.2", features = ["node-bindings", "rpc-types-anvil"] }

# === Renegade Dependencies === #
renegade-abi = { package = "abi", path = "../../abi", features = [
    "v2",
    "v2-relayer-types",
    "v2-auth-helpers",
    "transfer-auth",
] }
renegade-account-types = { package = "types-account", git = "https://github.com/renegade-fi/renegade.git" }
renegade-circuit-types = { package = "circuit-types", git = "https://github.com/renegade-fi/renegade.git" }
renegade-darkpool-types = { package = "darkpool-types", git = "https://github.com/renegade-fi/renegade.git" }
renegade-circuits = { package = "circuits-core", git = "https://github.com/renegade-fi/renegade.git", features = [
    "test_helpers",
] }
renegade-constants = { package = "constants", git = "https://github.com/renegade-fi/renegade.git" }
renegade-crypto = { package = "crypto", git = "https://github.com/renegade-fi/renegade.git" }
renegade-util = { package = "util", git = "https://github.com/renegade-fi/renegade.git", default-features = false, features = [
    "blockchain",
] }
test-helpers = { package = "test-helpers", git = "https://github.com/renegade-fi/renegade.git" }

# === Test Harness Dependencies === #
clap = { version = "4.0", features = ["derive"] }
colored = "3"
eyre = "0.6"
inventory = "0.3"
tokio = { version = "1.36", features = ["full"] }

# === Misc Dependencies === #
itertools = "0.13"
num-bigint = "0.4"
rand = "0.8"
serde_json = "1.0"
# === Blockchain === #
