[package]
edition = "2021"
name = "nile-rs-scripts-module"
version = "0.1.0"

[dependencies]
tokio = "1"
nile-rs = { git = "https://github.com/OpenZeppelin/nile-rs/", tag = "v0.1.0-rc.2" }
regex = "1"
lazy_static = "1.4.0"
starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "e72cc0a" }
starknet-providers = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "e72cc0a" }
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "e72cc0a" }
eyre = "0.6.8"
ark-crypto-primitives = { version = "0.4", features = ["crh", "merkle_tree", "sponge"] }
ark-std = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3.17"
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"
reqwest = "0.11.17"
