[package]
name = "poseidon-reference-implementation"
version = "0.1.0"
edition = "2021"

[dependencies]
# renegade-constants = { package = "constants", git = "https://github.com/renegade-fi/renegade.git", default-features = false }
# renegade-crypto = { git = "https://github.com/renegade-fi/renegade.git" }

renegade-constants = { package = "constants", path = "/Users/joeykraut/work/renegade/constants", default-features = false }
renegade-crypto = { path = "/Users/joeykraut/work/renegade/renegade-crypto" }

num-bigint = "0.4"
