[package]
name = "poseidon-reference-implementation"
version = "0.1.0"
edition = "2021"

[dependencies]
renegade-constants = { package = "constants", git = "https://github.com/renegade-fi/renegade.git", default-features = false }
renegade-crypto = { git = "https://github.com/renegade-fi/renegade.git" }

num-bigint = "0.4"
