[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
# === Arkworks === #
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-serialize = "0.4.0"

# === Renegade === #
renegade-circuit-types = { workspace = true }
renegade-circuits = { workspace = true }
renegade-constants = { workspace = true }
mpc-plonk = { workspace = true }
mpc-relation = { workspace = true }

# === Misc === #
clap = { version = "4.4.18", features = ["derive"] }
ethabi = "18.0.0"
hex = "0.4.3"
itertools = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
